# pdf_to_exel

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
prompts/: prompt.text
src/: excel_writer.py  extract.py  llm_structurer.py  main.py
