[project]
name = "assignment-r-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "charset-normalizer>=3.4.4",
    "google-generativeai>=0.8.5",
    "groq>=0.37.0",
    "jason>=0.1.7",
    "openpyxl==3.1.2",
    "pandas==2.2.0",
    "pathlib>=1.0.1",
    "pdfplumber==0.11.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv==1.0.1",
    "requests>=2.32.5",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
